@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19920923
+MANIFEST for ded, version t19921008
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
